--- a/app/templates/phonegap/_index.html
+++ b/app/templates/phonegap/_index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi">
 		<title><%= appName %></title>
 		<link rel="stylesheet" href="assets/components/bootstrap/dist/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="assets/components/bootstrap/dist/css/bootstrap-theme.min.css" />
 	</head>
 	<body>
 		<div class="app container">
@@ -16,6 +17,6 @@
 		<script type="text/javascript" src="phonegap.js"></script>
 		<script src="assets/components/jquery/jquery.min.js"></script>
 		<script src="assets/components/bootstrap/dist/js/bootstrap.min.js"></script>
-		<script src="scripts/index.js"></script>
+		<script src="assets/js/index.js"></script>
 	</body>
 </html>
